--- a/hw1/imp_analysis.ipynb
+++ b/hw1/imp_analysis.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,10 +230,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 48, 213, 332],\n",
+       "        [202, 213, 332],\n",
+       "        [ 47, 332, 370],\n",
+       "        [293, 332, 380],\n",
+       "        [ 48, 332, 380],\n",
+       "        [ 54, 332, 384],\n",
+       "        [256, 332, 380],\n",
+       "        [ 86, 282, 332],\n",
+       "        [ 12, 331, 366],\n",
+       "        [213, 267, 332]]),\n",
+       " array([0.48054422, 0.42993197, 0.41428571, 0.40816327, 0.40136054,\n",
+       "        0.39795918, 0.3877551 , 0.38666667, 0.38636364, 0.38190476]))"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keys, scores = [], []\n",
+    "for k, v in data.items():\n",
+    "    keys.append(k)\n",
+    "    scores.append(v)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 48, 213, 332],\n",
+       "        [202, 213, 332],\n",
+       "        [ 47, 332, 370],\n",
+       "        [293, 332, 380],\n",
+       "        [ 48, 332, 380],\n",
+       "        [ 54, 332, 384],\n",
+       "        [256, 332, 380],\n",
+       "        [ 86, 282, 332],\n",
+       "        [ 12, 331, 366],\n",
+       "        [213, 267, 332]]),\n",
+       " array([0.48054422, 0.42993197, 0.41428571, 0.40816327, 0.40136054,\n",
+       "        0.39795918, 0.3877551 , 0.38666667, 0.38636364, 0.38190476]))"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sor = np.argsort(scores)[::-1]\n",
+    "np.array(keys)[sor[:10]], np.array(scores)[sor[:10]]\n"
+   ]
   },
   {
    "cell_type": "code",
