--- a/temp.ipynb
+++ b/temp.ipynb
@@ -109,6 +109,39 @@
    "source": [
     "np.mean(accs), np.std(accs)*100"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nested cv bootstrap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accs = np.array([0.6656680647094069,\n",
+    "0.6658696951583981,\n",
+    "0.6656025538707103,\n",
+    "0.6657342657342658,\n",
+    "0.6662019518024298])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logs = ([-1.1675239535122772,\n",
+    "-1.7300877507687165,\n",
+    "-1.260455793553574,\n",
+    "-1.0118600494526304,\n",
+    "-1.1716473707515658])"
+   ]
   }
  ],
  "metadata": {
