--- a/hw4 - neural nets/competition.ipynb
+++ b/hw4 - neural nets/competition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "0ffd3f95",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "f89725c3",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "1c487db5",
    "metadata": {},
    "outputs": [],
@@ -61,31 +61,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "id": "47736583",
    "metadata": {},
    "outputs": [],
    "source": [
     "from nn import ANNClassification, ReLU_Activation, LeakyReLU_Activation\n",
     "\n",
-    "model = ANNClassification(units=[50, 50, 50], n_iter=1000, verbose=True, decay=0.9995, lambda_=1e-5)"
+    "model = ANNClassification(units=[100,100], n_iter=1000, verbose=True, decay=0.9995, lambda_=1e-5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "e3c889d6",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neural_network import MLPClassifier\n",
     "\n",
-    "# model = MLPClassifier(hidden_layer_sizes=(100, 100), activation=\"logistic\", max_iter=20, verbose=True, learning_rate_init=1, alpha=1e-5, learning_rate='adaptive', early_stopping=True, validation_fraction=0.01, solver=\"sgd\")"
+    "model = MLPClassifier(hidden_layer_sizes=(100, 100), activation=\"logistic\", max_iter=15, verbose=True, learning_rate_init=1e-4, alpha=1e-5, learning_rate='adaptive', early_stopping=True, validation_fraction=0.01, solver=\"adam\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "id": "a1e708a9",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "id": "7f6c35c1",
    "metadata": {},
    "outputs": [
@@ -118,68 +118,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[187, 50, 50, 50, 6]\n",
-      "Iteration: 0\n",
-      "Accuracy: 0.1868\n",
-      "Loss: 2.3016\n",
-      "0.9995\n",
-      "\n",
-      "Iteration: 100\n",
-      "Accuracy: 0.5267\n",
-      "Loss: 1.2403\n",
-      "0.9507419214772129\n",
-      "\n",
-      "Iteration: 200\n",
-      "Accuracy: 0.7727\n",
-      "Loss: 0.6979\n",
-      "0.9043623824454068\n",
-      "\n",
-      "Iteration: 300\n",
-      "Accuracy: 0.8135\n",
-      "Loss: 0.5400\n",
-      "0.8602453518737936\n",
-      "\n",
-      "Iteration: 400\n",
-      "Accuracy: 0.8277\n",
-      "Loss: 0.4762\n",
-      "0.8182804590118382\n",
-      "\n",
-      "Iteration: 500\n",
-      "Accuracy: 0.8397\n",
-      "Loss: 0.4330\n",
-      "0.7783627172668048\n",
-      "\n",
-      "Iteration: 600\n",
-      "Accuracy: 0.8529\n",
-      "Loss: 0.3987\n",
-      "0.7403922615512425\n",
-      "\n",
-      "Iteration: 700\n",
-      "Accuracy: 0.8652\n",
-      "Loss: 0.3708\n",
-      "0.7042740984433092\n",
-      "\n",
-      "Iteration: 800\n",
-      "Accuracy: 0.8763\n",
-      "Loss: 0.3473\n",
-      "0.6699178685348912\n",
-      "\n",
-      "Iteration: 900\n",
-      "Accuracy: 0.8858\n",
-      "Loss: 0.3266\n",
-      "0.6372376203729679\n",
-      "\n",
-      "Accuracy: 0.8950\n",
-      "Loss: 0.3100\n"
+      "Iteration 1, loss = 1.14429645\n",
+      "Validation score: 0.746269\n",
+      "Iteration 2, loss = 0.57737813\n",
+      "Validation score: 0.848259\n",
+      "Iteration 3, loss = 0.44829519\n",
+      "Validation score: 0.870647\n",
+      "Iteration 4, loss = 0.38144108\n",
+      "Validation score: 0.875622\n",
+      "Iteration 5, loss = 0.33247387\n",
+      "Validation score: 0.890547\n",
+      "Iteration 6, loss = 0.29929271\n",
+      "Validation score: 0.890547\n",
+      "Iteration 7, loss = 0.27481240\n",
+      "Validation score: 0.907960\n",
+      "Iteration 8, loss = 0.25810430\n",
+      "Validation score: 0.910448\n",
+      "Iteration 9, loss = 0.24280882\n",
+      "Validation score: 0.910448\n",
+      "Iteration 10, loss = 0.23241129\n",
+      "Validation score: 0.910448\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\sebas\\one\\OneDrive\\grive\\faks\\masters\\y1\\2nd semester\\ML-DS I\\ML-DS-I\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (10) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
      ]
     },
     {
      "data": {
+      "text/html": [
+       "<style>#sk-container-id-5 {color: black;}#sk-container-id-5 pre{padding: 0;}#sk-container-id-5 div.sk-toggleable {background-color: white;}#sk-container-id-5 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-5 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-5 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-5 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-5 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-5 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-5 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-5 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-5 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-5 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-5 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-5 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-5 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-5 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-5 div.sk-item {position: relative;z-index: 1;}#sk-container-id-5 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-5 div.sk-item::before, #sk-container-id-5 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-5 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-5 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-5 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-5 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-5 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-5 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-5 div.sk-label-container {text-align: center;}#sk-container-id-5 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-5 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-5\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>MLPClassifier(activation=&#x27;logistic&#x27;, alpha=1e-05, early_stopping=True,\n",
+       "              hidden_layer_sizes=(100, 50, 100), learning_rate=&#x27;adaptive&#x27;,\n",
+       "              max_iter=10, validation_fraction=0.01, verbose=True)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" checked><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MLPClassifier</label><div class=\"sk-toggleable__content\"><pre>MLPClassifier(activation=&#x27;logistic&#x27;, alpha=1e-05, early_stopping=True,\n",
+       "              hidden_layer_sizes=(100, 50, 100), learning_rate=&#x27;adaptive&#x27;,\n",
+       "              max_iter=10, validation_fraction=0.01, verbose=True)</pre></div></div></div></div></div>"
+      ],
       "text/plain": [
-       "<nn.ANNClassification at 0x25af1e56070>"
+       "MLPClassifier(activation='logistic', alpha=1e-05, early_stopping=True,\n",
+       "              hidden_layer_sizes=(100, 50, 100), learning_rate='adaptive',\n",
+       "              max_iter=10, validation_fraction=0.01, verbose=True)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,84 +174,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "d051b02f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-7.15874176e-02, -7.26953029e-02, -2.51012642e-02, ...,\n",
-       "        -2.83805492e-02,  3.76539271e-02, -3.53861025e-02],\n",
-       "       [ 1.16496087e-01,  1.44770161e-01, -1.02671763e-01, ...,\n",
-       "        -9.31386241e-02, -7.90882926e-02,  3.53434225e-02],\n",
-       "       [ 4.91043730e-02, -1.23716967e-02, -6.46043315e-02, ...,\n",
-       "        -3.48235798e-02, -1.95464642e-02,  3.58277480e-02],\n",
-       "       ...,\n",
-       "       [-1.54870350e-03,  2.22039799e-01, -2.90371909e-02, ...,\n",
-       "         1.02662902e-01,  6.61607607e-02, -6.14272581e-02],\n",
-       "       [-1.35543470e-01, -8.12747143e-02,  5.47264173e-02, ...,\n",
-       "         9.17720021e-02, -3.51990373e-02, -3.50132982e-02],\n",
-       "       [-1.80915841e-02, -4.89291417e-03, -2.54148731e-02, ...,\n",
-       "        -1.17023532e-01, -1.23315727e-02,  9.69040439e-05]])"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.layers[0].weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "id": "d8a01013",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\sebas\\one\\OneDrive\\grive\\faks\\masters\\y1\\2nd semester\\ML-DS I\\ML-DS-I\\hw4 - neural nets\\nn.py:68: RuntimeWarning: overflow encountered in exp\n",
-      "  self.output = 1 / (1 + np.exp(-1 * inputs))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lin_data_predict = data_predict.reshape(-1, data_predict.shape[-1])\n",
     "lin_data_predict = scaler.transform(lin_data_predict)\n",
     "\n",
-    "predictions = model.predict(lin_data_predict)"
+    "predictions = model.predict_proba(lin_data_predict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 47,
    "id": "ebeb7973",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[3.18134745e-02, 2.17026030e-01, 2.17983321e-01, 1.47560469e-01,\n",
-       "        3.85391144e-01, 2.25561423e-04],\n",
-       "       [3.18134745e-02, 2.17026030e-01, 2.17983321e-01, 1.47560469e-01,\n",
-       "        3.85391144e-01, 2.25561423e-04],\n",
-       "       [3.18134745e-02, 2.17026030e-01, 2.17983321e-01, 1.47560469e-01,\n",
-       "        3.85391144e-01, 2.25561423e-04],\n",
+       "array([[7.9119861e-02, 2.3109853e-02, 6.8142825e-01, 1.9649565e-01,\n",
+       "        1.9797349e-02, 4.8966554e-05],\n",
+       "       [7.9119861e-02, 2.3109853e-02, 6.8142825e-01, 1.9649565e-01,\n",
+       "        1.9797349e-02, 4.8966554e-05],\n",
+       "       [7.9119861e-02, 2.3109853e-02, 6.8142825e-01, 1.9649565e-01,\n",
+       "        1.9797349e-02, 4.8966554e-05],\n",
        "       ...,\n",
-       "       [3.18134745e-02, 2.17026030e-01, 2.17983321e-01, 1.47560469e-01,\n",
-       "        3.85391144e-01, 2.25561423e-04],\n",
-       "       [3.18134745e-02, 2.17026030e-01, 2.17983321e-01, 1.47560469e-01,\n",
-       "        3.85391144e-01, 2.25561423e-04],\n",
-       "       [3.18134745e-02, 2.17026030e-01, 2.17983321e-01, 1.47560469e-01,\n",
-       "        3.85391144e-01, 2.25561423e-04]])"
+       "       [7.9119861e-02, 2.3109853e-02, 6.8142825e-01, 1.9649565e-01,\n",
+       "        1.9797349e-02, 4.8966554e-05],\n",
+       "       [7.9119861e-02, 2.3109853e-02, 6.8142825e-01, 1.9649565e-01,\n",
+       "        1.9797349e-02, 4.8966554e-05],\n",
+       "       [7.9119861e-02, 2.3109853e-02, 6.8142825e-01, 1.9649565e-01,\n",
+       "        1.9797349e-02, 4.8966554e-05]], dtype=float32)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 48,
    "id": "5b255b58",
    "metadata": {},
    "outputs": [],
@@ -288,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 49,
    "id": "fd49e0c3",
    "metadata": {},
    "outputs": [
@@ -298,7 +240,7 @@
        "(200, 300, 6)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,19 +251,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 50,
    "id": "9fcc7751",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "with open(\"ANN_50.npy\", \"wb\") as f:\n",
+    "with open(\"MLP_50.npy\", \"wb\") as f:\n",
     "    np.save(f, predictions.astype(np.float32))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "e848e13c",
    "metadata": {},
    "outputs": [
